# deepcfr-texas-no-limit-holdem-6-players

./: setup.py
scripts/: gui_smoke.py  gui_theme.py  play.py  poker_gui.py
src/training/: train.py
web/backend/: README.md  pyproject.toml
web/backend/app/: main.py
web/deepcfr-web-frontend/: index.html  package-lock.json  package.json
web/deepcfr-web-frontend/src/: App.tsx
web/deepcfr-web-frontend/src/lib/: api.ts
